--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -14,7 +19,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "types": ["node", "jest", "jest-dom"],
+    "types": ["node", "jest"],
     "plugins": [
       {
         "name": "next"
@@ -33,8 +38,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts",
-    "./src/setupTests.ts"
+    "**/*.mts"
   ],
   "exclude": ["node_modules"]
 }
