--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
+  "printWidth": 80,
+  "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "htmlWhitespaceSensitivity": "ignore",
+  "singleAttributePerLine": true,
+  "objectWrap": "preserve",
+  "experimentalOperatorPosition": "start"
 }
