--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,17 +18,35 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@piducancore/fonts-andale-mono": "^1.0.1",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.18",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.562.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.26",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
+    "react-pdf": "^10.2.0",
+    "react-scrollspy-nav": "^1.3.0",
+    "react-scrollspy-navigation": "^2.0.7",
+    "resend": "^6.6.0",
+    "simple-icons": "^16.3.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -47,6 +66,7 @@
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
+    "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "postcss-nesting": "^13.0.2",
