--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^30.2.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^30.2.0",
+    "next-router-mock": "^1.0.4",
     "postcss": "^8.5.6",
     "postcss-nesting": "^13.0.2",
     "prettier": "^3.7.4",
